# baldrick

./: .coveragerc  .gitignore  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  azure-pipelines.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
baldrick/: __init__.py  config.py  conftest.py  logging.py  utils.py
baldrick/blueprints/: __init__.py  circleci.py  github.py  pull_request_checker.py  stale_issues.py  stale_pull_requests.py
baldrick/blueprints/tests/: test_circleci.py  test_github.py  test_pull_request_checker.py  test_stale_issues.py  test_stale_pull_requests.py
baldrick/github/: __init__.py  github_api.py  github_auth.py
baldrick/github/tests/: test_github_api.py  test_github_auth.py
baldrick/plugins/: __init__.py  circleci_artifacts.py  github_block_labels.py  github_comment_matcher.py  github_milestones.py  github_pull_requests.py  github_pull_requests_autolabel.py  github_pull_requests_base_branch.py  github_pushes.py  github_team_updater.py  github_towncrier_changelog.py  github_welcome.py  milestone_checker.py  pull_request_handler.py  towncrier_add_entry.py  towncrier_changelog_checker.py  utils.py
baldrick/plugins/tests/: issue_comment_payload.json  test_add_changelog_towncrier.py  test_autolabel.py  test_circleci_artifacts.py  test_github_basebranch_checker.py  test_github_milestones.py  test_github_pull_requests.py  test_github_pushes.py  test_github_towncrier_changelog.py  test_team_updater.py
baldrick/scripts/: stale_issues.py  stale_pull_requests.py
baldrick/scripts/tests/: test_stale_issues.py  test_stale_pull_requests.py
baldrick/tests/: test_config.py  test_utils.py
doc/: Makefile  api.rst  app.rst  conf.py  github.rst  heroku.rst  index.rst  local.rst  make.bat  plugins.rst
docs/: api.rst  app.rst  conf.py
example/: CHECKS  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt  run.py
template/: Procfile  README.md  pyproject.toml  requirements.txt  run.py
