[build-system]
requires = ["setuptools>=64", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baldrick"
dynamic = ["version"]
authors = [
    {name = "Stuart Mumford"},
    {name = "Thomas Robitaille"},
    {name = "Pey Lian Lim"},
    {name = "Brigitta Sipőcz"},
]
license = {text = "BSD 3-Clause"}
description = "Baldrick: A cunning plan for GitHub Bots"
readme = "README.rst"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "pyjwt",
    "requests",
    "python-dateutil",
    "cryptography",
    "humanize",
    "towncrier==25.8.0",  # We hard-pin towncrier because we use hidden functions to parse the config
    "loguru",
    "ttldict",
]

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
baldrick = ["data/*"]

[tool.setuptools_scm]
write_to = "baldrick/version.py"
write_to_template = """
# Note that we need to fall back to the hard-coded version if either
# setuptools_scm can't be imported or setuptools_scm can't determine the
# version, so we catch the generic 'Exception'.
try:
    from setuptools_scm import get_version
    __version__ = get_version(root='..', relative_to=__file__)
except Exception:
    __version__ = '{version}'
"""

[tool.pytest]
minversion = "9.0"
testpaths = ["baldrick", "docs"]
filterwarnings = [
    "error",
    "ignore:Unknown config option:pytest.PytestConfigWarning",
    "ignore:Importing 'itsdangerous.json' is deprecated:DeprecationWarning",
]
xfail_strict = true
markers = ["github_api"]
addopts = ["-m not github_api"]

[tool.coverage.run]
omit = [
    "baldrick/__init*",
    "baldrick/conftest.py",
    "baldrick/*setup_package*",
    "baldrick/tests/*",
    "baldrick/*/tests/*",
    "baldrick/extern/*",
    "baldrick/version*",
    "*/baldrick/__init*",
    "*/baldrick/conftest.py",
    "*/baldrick/*setup_package*",
    "*/baldrick/tests/*",
    "*/baldrick/*/tests/*",
    "*/baldrick/extern/*",
    "*/baldrick/version*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main\\(.*\\):",
    "pragma: py{ignore_python_version}",
    "def _ipython_key_completions_",
]
