[metadata]
name = baldrick
author = Stuart Mumford, Thomas Robitaille, Pey Lian Lim, and Brigitta Sipocz
author_email = thomas.robitaille@gmail.com
license = BSD 3-Clause
license_file = LICENSE
description = Baldrick: A cunning plan for GitHub Bots
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires = 
    flask
    pyjwt
    requests
    python-dateutil
    cryptography
    humanize
    towncrier
    toml
    loguru
    ttldict


[options.extras_require]
test =
    pytest
    pytest-flake8
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[options.package_data]
baldrick = data/*

[flake8]
# E501: line too long
# W504: break after binary operator
ignore = E501,W504

[tool:pytest]
testpaths = "baldrick" "docs"
flake8-ignore = E501 W504
filterwarnings = error
xfail_strict = true

[coverage:run]
omit =
  baldrick/__init*
  baldrick/conftest.py
  baldrick/*setup_package*
  baldrick/tests/*
  baldrick/*/tests/*
  baldrick/extern/*
  baldrick/version*
  */baldrick/__init*
  */baldrick/conftest.py
  */baldrick/*setup_package*
  */baldrick/tests/*
  */baldrick/*/tests/*
  */baldrick/extern/*
  */baldrick/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
